@@ -1,6 +1,7 @@
 AUX app.ini 921 BLAKE2B 99a23edacd0be7c6717b941630d5b538a86542de835255bd609c15a39f72ff9c2e7fd6df2f65f480e922154e9acdc3ead8d1e861bba889ba30ad6debd46c32e5 SHA512 334a2458c745e1f52e82f0d62bdcb52dd673104154335acd23aca94c2f99893b6ee4432fc1ca15672a98293f27ed8948f3553c2f51d9caec594f7d85aea38094
-AUX drone-runner-docker.service 436 BLAKE2B 8838040f34c9ccc5374d02a9f9b966dc565148094dd984f21826e535988b4c4e3cff469fd45e5f7f005876f316f9a595757d2a329832a371af2db95acc2d0b26 SHA512 8e674112b720fb25040fa349f275ca71a17d2385b961df3d02c6094f483fd43ab81d2a576fe4ffac3b97bad1d051ee713c9f50d7e341c2948eafec974baa50d0
+AUX drone-runner-docker.service 481 BLAKE2B 01d977fa568cabc418f3d10ed9a7a4d658f5d1e0e3112baee6d7b850402a870932b3fa302fa009f300b00c01a28aa4f966caaa281639d606b50ce8c437d36003 SHA512 6229bee7b9c713b97a6110d0f023c2586678a16aed49a0259623941bafb99f2f713aca696abb2dc40c929c7fea6e0496c8af071a3d43f860858176fe4ad5566f
 AUX drone-runner-docker.sh 612 BLAKE2B becd739d917e1c924deeb297749034639591e02f5f3f11a60241b74d8edfd927f098ca17a5ccedc5d470b8279715eab9e92ae6d21d78b6d81f059089cb89d8be SHA512 ed2c6ce725467ca038eed6a66974a76bc61931aea89eed33ee4a1752cc30000d08671c52f84be1c582f3beb2ebbddf9240f975cfdb1a543abe527465ea5ff6a0
 EBUILD drone-runner-docker-1.5.2-r1.ebuild 922 BLAKE2B 9c2fa3bc7956ad881f90c5c2503b9075fc9409e32099825c01c9da64e9d4559cf646fe597470e7527843ce308b9a24c88356e7d7ccb9dedf3f25da6dd96aff1f SHA512 8355b65eca92a74f34ed81878b3d1627ea9a80334f8c83eb17cba1527cb76adfe47c599afcf97de9a12650af679fe2109ab71c594541d174d35b01428399a0a4
-MISC ChangeLog 540 BLAKE2B e23242257ecf2df12f65f20e2621e6f9da8116f184c5dbe91cd1f7a57e9eaa3cc880300fd6f0cdaa3b3081c4ec874fdfdc69f25235d03acf111fff33b19df2d2 SHA512 a0e49e6b58b60266ce73665474f114ad760051f89fbc3def045fd88c8dd84ba354ac7887e8ec7c9213811fa2297980a9a71927735f6e213ad1fd5ba759ca17ba
+EBUILD drone-runner-docker-1.6.0.ebuild 922 BLAKE2B 9c2fa3bc7956ad881f90c5c2503b9075fc9409e32099825c01c9da64e9d4559cf646fe597470e7527843ce308b9a24c88356e7d7ccb9dedf3f25da6dd96aff1f SHA512 8355b65eca92a74f34ed81878b3d1627ea9a80334f8c83eb17cba1527cb76adfe47c599afcf97de9a12650af679fe2109ab71c594541d174d35b01428399a0a4
+MISC ChangeLog 747 BLAKE2B 0bed2e166418f3bd77deb8827fa9d4d678a394e1b28e38e36d039666e0512dc7cc086768deb86ff641d98bdc026c5168a89ce49aa28669b62e54f9c508d20cbb SHA512 c9ac2850cc2b946acc9c4704040d659415ecd9ba521c512bdcda68e468f12a355041f4c268dafa63be549069732894fc859b74513543965f0a6d63af59ab7761
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
