@@ -1,3 +1,9 @@
+*drone-runner-docker-1.6.0 (14 Nov 2020)
+
+  14 Nov 2020; Manuel Friedli <manuel@gentoo.org>
+  +drone-runner-docker-1.6.0.ebuild, files/drone-runner-docker.service:
+  dev-util/drone-runner-docker: Fixes #66
+
 *drone-runner-docker-1.5.2-r1 (08 Oct 2020)
 
   08 Oct 2020; Manuel Friedli <manuel@gentoo.org>
